--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -18,13 +18,33 @@ body{
     display: grid;
     place-items: center;
 }
+.admin-logo-container{
+    gap: .5rem;
+    padding:.5rem .5rem .5rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.admin-logo-container>:nth-child(1){
+    font-weight: bold;
+    align-items: center;
+    display: flex;
+}
+.admin-logo-container>:nth-child(2){
+    font-size: 36px;
+    font-weight: bold;
+}
+.admin-logo-container>:nth-child(1) img {
+    width: 50px;
+    height: 50px;
+}
 .logo-container{
     gap: .5rem;
     padding:.5rem .5rem .5rem 1rem;
     display: flex;
     width: 100%;
 }
-.logo-container>:nth-child(2) {
+.logo-container>:nth-child(2)>:nth-child(1) {
    font-size: 36px;
    font-weight: bold;
   }
